@@ -24,6 +24,7 @@ $\rightarrow$ corrected panel and Ku Antenna config, and corrected wrong scenari
 $\rightarrow$ added missing file to project\\
 $\rightarrow$ corrected typo in variable name\\
 $\rightarrow$ deleted unneeded spaces\\
+$\rightarrow$ reverted mesh visibility change that caused mesh draw order issues\\
 \\
 \\
 The change logs of previous releases are available in the "<Orbiter installation>\textbackslash Doc\textbackslash Space Shuttle Vessel\textbackslash Changelog.txt" file.
