@@ -27,6 +27,7 @@ Date         Developer
 2023/02/13   GLS
 2023/02/12   GLS
 2023/03/26   GLS
+2023/08/29   GLS
 ********************************************/
 #include "ODS.h"
 #include "../Atlantis.h"
@@ -741,7 +742,7 @@ namespace eva_docking
 	{
 		VECTOR3 pos = aft ? ODS_MESH_AFT_OFFSET : ODS_MESH_OFFSET;
 		mesh_ods = STS()->AddMesh( hODSMesh, &pos );
-		STS()->SetMeshVisibilityMode( mesh_ods, MESHVIS_ALWAYS );
+		STS()->SetMeshVisibilityMode( mesh_ods, MESHVIS_EXTERNAL | MESHVIS_VC | MESHVIS_EXTPASS );
 		oapiWriteLog( "(SSV_OV) [INFO] ODS mesh added" );
 		return;
 	}
